# tap-pokemon

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: constraints.txt  test.yml
tap_pokemon/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
