[tool.poetry]
name = "tap-pokemon"
version = "0.0.1"
description = "`tap-pokemon` is a Singer tap for Pokemon, built with the Meltano SDK for Singer Taps."
authors = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
keywords = [
  "ELT",
  "singer.io",
  "Pokemon",
]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/edgarrmondragon/tap-pokemon"
repository = "https://github.com/edgarrmondragon/tap-pokemon"
documentation = "https://github.com/edgarrmondragon/tap-pokemon#readme"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = "0.29.0"
requests-cache = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
use_parentheses = true
include_trailing_comma = true
src_paths = "tap_pokemon"
known_first_party = "tap_pokemon"
add_imports = [
  "from __future__ import annotations",
]

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["backoff.*"]

[build-system]
requires = ["poetry-core>=1,<2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
"tap-pokemon" = "tap_pokemon.tap:TapPokemon.cli"
